Minor fixes to address validator errors/warnings. Google Webmaster Tools verification file.

--- a/env/aws-suse/etc/apache2/vhosts.d/vanity-hosts.conf
+++ b/env/aws-suse/etc/apache2/vhosts.d/vanity-hosts.conf
@@ -9,7 +9,7 @@ NameVirtualHost *:80
 <VirtualHost *:80>
     ServerName vanity.bill-boyer.com
     ServerAlias bill-boyer.com *.bill-boyer.com william-boyer.com *.william-boyer.com
-    Redirect permanent / http://www.bill-boyer.com
+    Redirect permanent / http://www.bill-boyer.com/
 </VirtualHost>
 
 <VirtualHost *:80>
