--- a/env/live/Vagrantfile
+++ b/env/live/Vagrantfile
@@ -22,7 +22,7 @@ Vagrant.configure("2") do |config|
     s.path = "provision"
   end
 
-  config.vm.synced_folder "../../src, "/vagrant-mnt/src"
+  config.vm.synced_folder "../../src", "/vagrant-mnt/src"
   config.vm.synced_folder "../shared", "/vagrant-mnt/env-shared"
   config.vm.synced_folder "/vagrant-mnt/ops", "/vagrant-mnt/ops"
   config.vm.synced_folder "../../../facts-db/", "/vagrant-mnt/facts-db"
