--- a/env/qa/Vagrantfile
+++ b/env/qa/Vagrantfile
@@ -11,7 +11,7 @@ Vagrant.configure("2") do |config|
     aws.instance_type = "t1.micro"
 
     aws.tags = {
-      'Name' => 'new-www.bill-boyer.com'
+      'Name' => 'qa.bill-boyer.com'
     }
 
     override.ssh.username = "root"
@@ -22,7 +22,7 @@ Vagrant.configure("2") do |config|
     s.path = "provision"
   end
 
-  config.vm.synced_folder "../../src, "/vagrant-mnt/src"
+  config.vm.synced_folder "../../src", "/vagrant-mnt/src"
   config.vm.synced_folder "../shared", "/vagrant-mnt/env-shared"
   config.vm.synced_folder "/vagrant-mnt/ops", "/vagrant-mnt/ops"
   config.vm.synced_folder "../../../facts-db/", "/vagrant-mnt/facts-db"
