--- a/env/live/Vagrantfile
+++ b/env/live/Vagrantfile
@@ -25,7 +25,7 @@ Vagrant.configure("2") do |config|
   config.vm.synced_folder "../../src", "/vagrant-mnt/src"
   config.vm.synced_folder "../shared", "/vagrant-mnt/env-shared"
   config.vm.synced_folder "/vagrant-mnt/ops", "/vagrant-mnt/ops"
-  config.vm.synced_folder "../../../facts-db/", "/vagrant-mnt/facts-db"
+  config.vm.synced_folder "../../facts-db/", "/vagrant-mnt/facts-db"
 
   config.vm.define "1", primary: true
   config.vm.define "2"
