--- a/env/qa/Vagrantfile
+++ b/env/qa/Vagrantfile
@@ -23,6 +23,7 @@ Vagrant.configure("2") do |config|
   end
 
   config.vm.synced_folder "../../src", "/vagrant-mnt/src"
+  config.vm.synced_folder "../../dist", "/vagrant-mnt/dist"
   config.vm.synced_folder "../shared", "/vagrant-mnt/env-shared"
   config.vm.synced_folder "/vagrant-mnt/ops", "/vagrant-mnt/ops"
   config.vm.synced_folder "../../facts-db/", "/vagrant-mnt/facts-db"
