--- a/env/dev/local/Vagrantfile
+++ b/env/dev/local/Vagrantfile
@@ -10,9 +10,9 @@ Vagrant.configure("2") do |config|
     s.path = "provision"
   end
 
-  config.vm.synced_folder "../../src", "/vagrant-mnt/src"
-  config.vm.synced_folder "../shared", "/vagrant-mnt/env-shared"
-  config.vm.synced_folder "../../../ops.bill-boyer.com/", "/vagrant-mnt/ops"
-  config.vm.synced_folder "../../../facts-db/", "/vagrant-mnt/facts-db"
-  config.vm.synced_folder "../../../facts-js/", "/vagrant-mnt/facts-js"
+  config.vm.synced_folder "../../../src", "/vagrant-mnt/src"
+  config.vm.synced_folder "../../shared", "/vagrant-mnt/env-shared"
+  config.vm.synced_folder "../../../../ops.bill-boyer.com/", "/vagrant-mnt/ops"
+  config.vm.synced_folder "../../../../facts-db/", "/vagrant-mnt/facts-db"
+  config.vm.synced_folder "../../../../facts-js/", "/vagrant-mnt/facts-js"
 end
