--- a/env/dev/aws/Vagrantfile
+++ b/env/dev/aws/Vagrantfile
@@ -23,8 +23,6 @@ Vagrant.configure("2") do |config|
   end
 
   config.vm.synced_folder "../../../src", "/vagrant-mnt/src"
-  config.vm.synced_folder "../../shared", "/vagrant-mnt/env-shared"
+  config.vm.synced_folder "../../shared", "/vagrant-mnt/env/shared"
   config.vm.synced_folder "../../../../ops.bill-boyer.com/", "/vagrant-mnt/ops"
-  config.vm.synced_folder "../../../../facts-db/", "/vagrant-mnt/facts-db"
-  config.vm.synced_folder "../../../../facts-js/", "/vagrant-mnt/facts-js"
 end
