--- a/env/qa/Vagrantfile
+++ b/env/qa/Vagrantfile
@@ -24,18 +24,6 @@ Vagrant.configure("2") do |config|
 
   config.vm.synced_folder "../../src", "/vagrant-mnt/src"
   config.vm.synced_folder "../../dist", "/vagrant-mnt/dist"
-  config.vm.synced_folder "../shared", "/vagrant-mnt/env-shared"
+  config.vm.synced_folder "../shared", "/vagrant-mnt/env/shared"
   config.vm.synced_folder "/vagrant-mnt/ops", "/vagrant-mnt/ops"
-  config.vm.synced_folder "../../facts-db/", "/vagrant-mnt/facts-db"
-  config.vm.synced_folder "../../facts-js/", "/vagrant-mnt/facts-js"
-
-  config.vm.define "1", primary: true
-  config.vm.define "2"
-  config.vm.define "3"
-  config.vm.define "4"
-  config.vm.define "5"
-  config.vm.define "6"
-  config.vm.define "7"
-  config.vm.define "8"
-  config.vm.define "9"
 end
