--- a/env/qa/Vagrantfile
+++ b/env/qa/Vagrantfile
@@ -26,4 +26,14 @@ Vagrant.configure("2") do |config|
   config.vm.synced_folder "../../dist", "/vagrant-mnt/dist"
   config.vm.synced_folder "../shared", "/vagrant-mnt/env/shared"
   config.vm.synced_folder "/vagrant-mnt/ops", "/vagrant-mnt/ops"
+
+  config.vm.define "1", primary: true
+  config.vm.define "2"
+  config.vm.define "3"
+  config.vm.define "4"
+  config.vm.define "5"
+  config.vm.define "6"
+  config.vm.define "7"
+  config.vm.define "8"
+  config.vm.define "9"
 end
