--- a/src/rails/config/database.yml
+++ b/src/rails/config/database.yml
@@ -5,7 +5,7 @@
 #   gem 'sqlite3'
 development:
   adapter: sqlite3
-  database: /vagrant-mnt/src/rails/db/development.sqlite3
+  database: /srv/rails/www.bill-boyer.com/db/development.sqlite3
   pool: 5
   timeout: 5000
 
@@ -14,12 +14,12 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: sqlite3
-  database: /vagrant-mnt/src/rails/db/development.sqlite3
+  database: /srv/rails/www.bill-boyer.com/db/test.sqlite3
   pool: 5
   timeout: 5000
 
 production:
   adapter: sqlite3
-  database: /vagrant-mnt/src/rails/db/development.sqlite3
+  database: /srv/rails/www.bill-boyer.com/db/production.sqlite3
   pool: 5
   timeout: 5000
