--- a/env/live/Vagrantfile
+++ b/env/live/Vagrantfile
@@ -23,7 +23,7 @@ Vagrant.configure("2") do |config|
   end
 
   config.vm.synced_folder "../../src", "/vagrant-mnt/src"
-  config.vm.synced_folder "../../dist", "/vagrant-mnt/dist"
+  config.vm.synced_folder "../../build", "/vagrant-mnt/build"
   config.vm.synced_folder "../shared", "/vagrant-mnt/env/shared"
   config.vm.synced_folder "/vagrant-mnt/ops", "/vagrant-mnt/ops"
 
