--- a/env/dev-local/Vagrantfile
+++ b/env/dev-local/Vagrantfile
@@ -10,7 +10,7 @@ Vagrant.configure("2") do |config|
     s.path = "provision"
   end
 
-  config.vm.synced_folder "../../../src", "/vagrant-mnt/src"
-  config.vm.synced_folder "../../shared", "/vagrant-mnt/env/shared"
-  config.vm.synced_folder "../../../../ops.bill-boyer.com/", "/vagrant-mnt/ops"
+  config.vm.synced_folder "../../src", "/vagrant-mnt/src"
+  config.vm.synced_folder "../shared", "/vagrant-mnt/env/shared"
+  config.vm.synced_folder "../../../ops.bill-boyer.com/", "/vagrant-mnt/ops"
 end
