First integration with airports-js.

--- a/env/shared/bower.json
+++ b/env/shared/bower.json
@@ -6,6 +6,8 @@
     "jquery": null,
     "modernizr": null,
     "socket.io-client": null,
+    "typeahead.js": null,
+    "airports-js": "https://github.com/wboyer/airports-js.git",
     "facts-js": "https://github.com/wboyer/facts-js.git",
     "prioritized-queue": "https://github.com/wboyer/prioritized-queue-js.git",
     "requirejs": null
