--- a/env/dev-local/Vagrantfile
+++ b/env/dev-local/Vagrantfile
@@ -5,6 +5,7 @@ Vagrant.configure("2") do |config|
   config.vm.network :forwarded_port, guest: 81, host: 81
   config.vm.network :forwarded_port, guest: 8080, host: 8080
   config.vm.network :forwarded_port, guest: 3000, host: 3000
+  config.vm.network :forwarded_port, guest: 27017, host: 27017
 
   config.vm.provision :shell do |s|
     s.path = "provision"
