--- a/env/live/Vagrantfile
+++ b/env/live/Vagrantfile
@@ -10,7 +10,7 @@ Vagrant.configure('2') do |config|
     aws.keypair_name = 'bill-boyer.com'
     aws.security_groups = ['bill-boyer.com']
     aws.ami = $imageId
-    aws.instance_type = 't2.medium'
+    aws.instance_type = 'm3.medium'
 
     aws.tags = {
       'Name' => 'www.bill-boyer.com'
